<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/detalli_livrare_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/detalii_livrare"
        android:layout_margin="@dimen/dim_20dp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/dim_40dp"/>

    <LinearLayout
        android:id="@+id/client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalli_livrare_title"
        android:layout_marginTop="@dimen/dim_20dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/client_left"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/client"
            android:textSize="@dimen/dim_30dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/client_right"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/judet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/client"
        android:layout_marginTop="@dimen/dim_20dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/judet_left"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/judet"
            android:textSize="@dimen/dim_30dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/judet_right"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/judet"
        android:layout_marginTop="@dimen/dim_20dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/loc_left"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/localitate"
            android:textSize="@dimen/dim_30dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/loc_right"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loc"
        android:layout_marginTop="@dimen/dim_20dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/adresa_left"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/adresa"
            android:textSize="@dimen/dim_30dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/adresa_right"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/telefon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adresa"
        android:layout_marginTop="@dimen/dim_20dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/telefon_left"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/telefon"
            android:textSize="@dimen/dim_30dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/telefon_right"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nr_colete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/telefon"
        android:layout_marginTop="@dimen/dim_20dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/nr_colete_left"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/nr_colete"
            android:textSize="@dimen/dim_30dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/nr_colete_right"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_livrare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nr_colete"
        android:layout_marginTop="@dimen/dim_20dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/status_livrare_left"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="@dimen/dim_30dp"
            android:layout_weight="1"/>
        <CheckBox
            android:id="@+id/status_livrare_right"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/livrare"
            android:textSize="@dimen/dim_20dp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="@dimen/dim_180dp"
        android:layout_height="@dimen/dim_80dp"
        android:layout_below="@+id/status_livrare"
        android:text="@string/save"
        android:textSize="@dimen/dim_20dp"
        android:layout_margin="@dimen/dim_20dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>