<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:orientation="vertical">

    <TextView
        android:id="@+id/detalli_scanare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/detalii_scanare"
        android:layout_margin="@dimen/dim_20dp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/dim_40dp"/>

    <LinearLayout
        android:id="@+id/id_colet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalli_scanare"
        android:layout_marginTop="@dimen/dim_20dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/id_colet_left"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/colet_id"
            android:textSize="@dimen/dim_30dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/id_colet_right"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/awb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_colet"
        android:layout_marginTop="@dimen/dim_20dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/awb_left"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/awb"
            android:textSize="@dimen/dim_30dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/awb_right"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/awb"
        android:layout_marginTop="@dimen/dim_20dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/status_left"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="@dimen/dim_30dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/status_right"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="@dimen/dim_180dp"
        android:layout_height="@dimen/dim_80dp"
        android:text="@string/update"
        android:textSize="@dimen/dim_20dp"
        android:layout_margin="@dimen/dim_20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>